# Xiaowen-Li.github.io

./: MANIFEST.in  Makefile  README.md  index.md  pyproject.toml  requirements.txt  run_simulation_SGL_NN.py  setup.py  strong_rule_cd.py
config/: dask_slurm_default.yaml  dask_slurm_test.yaml
docs/: 02_PROBLEM.md  03_USERGUIDE.md  04_MAINTENANCE.md  05_NOTEBOOKS.md  conf.py  index.rst
docs/notebooks/: 01_hsic_explore.ipynb  02_hsic_profile.ipynb  03a_feature_optimization.ipynb  03b_feature_optimization.ipynb  04_coordinate_descent.ipynb  05_dask_parallelization.ipynb  06_dask_graphs.ipynb  07_large_datasets.ipynb  08_one_iteration_timings.ipynb  09_multikernel.ipynb  10_continuous_data.ipynb  11_feature_optimization.ipynb  12_feature_optimization.ipynb  test_continuous.ipynb  wendy_example.ipynb
pyMKHSICLasso/: MKhsic_lasso.py  __init__.py  api.py  kernel_tools.py  nlars.py  plot_figure.py
slurm/: __init__.py  benchmark.py  cluster.py  optimization.py
src/hsic_optimization/: hsic_lasso.py  hsic_tools.py
